--- a/jgu_course_reviewer/reviewer/templates/home.html
+++ b/jgu_course_reviewer/reviewer/templates/home.html
@@ -15,7 +15,7 @@
               </div>
               <p class="mb-1">{{review.course_instructor_term.instructor.instructor_name}}</p>
               <div class="d-flex w-100 justify-content-between">
-                <small class="text-muted">{{review.description}}</small>
+                <small class="text-muted">{{review.author}}: {{review.description}}</small>
                 <small class="text-muted">Rating: {{review.rating}}</small>
               </div>
             </a>
