--- a/jgu_course_reviewer/reviewer/templates/instructors.html
+++ b/jgu_course_reviewer/reviewer/templates/instructors.html
@@ -8,7 +8,7 @@
     
     <div class="list-group">
         {% for instructor in instructors %}
-        <a href="{% url 'instructor-info' instructor.id %}" class="list-group-item list-group-item-action flex-column align-items-start p2">
+        <a href="{% url 'instructor_info' instructor.id %}" class="list-group-item list-group-item-action flex-column align-items-start p2">
           <div class="d-flex w-100 justify-content-between">
             <h5 class="mb-1">{{instructor.instructor_name}}</h5>
             <small class="text-muted">{{instructor.avg_rating}}</small>
