--- a/jgu_course_reviewer/reviewer/templates/create_review.html
+++ b/jgu_course_reviewer/reviewer/templates/create_review.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load ratings %}
 {% load crispy_forms_tags %}
 
 {% block title %}Create Review{% endblock %}
@@ -13,6 +14,7 @@
             {{ form |crispy }}
             <input type="submit" class="btn btn-dark" value="Submit">
         </form>
+        {% ratings object %}
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     {{ form.media.js }}
