--- a/jgu_course_reviewer/reviewer/templates/base.html
+++ b/jgu_course_reviewer/reviewer/templates/base.html
@@ -44,7 +44,7 @@
                 <ul class="navbar-nav ms-auto">
                   {% if user.is_authenticated %}
                       <li class="nav-item">
-                        <a class="nav-link" href="/">{{request.user}}</a>
+                        <a class="nav-link" href="/user/me">{{request.user}}</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="{% url 'logout' %}">Logout</a>
