added icon for tabs bar in browsers

--- a/jgu_course_reviewer/reviewer/templates/base.html
+++ b/jgu_course_reviewer/reviewer/templates/base.html
@@ -14,6 +14,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        <link rel="icon" type="image/x-icon" href="{% static 'jgu_logo.png' %}">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
